idf_component_register(
    SRCS
        "lv_100ask_2048/lv_100ask_2048.c"
        "lv_100ask_2048/game2048.c"
        "yang/yang.c"
        "yang/bottom_dock_img.c"
        "yang/grass1_img.c"
        "yang/grass2_img.c"
        "yang/yang_bg_img.c"
        "yang/yang_card10_img.c"
        "yang/yang_card11_img.c"
        "yang/yang_card12_img.c"
        "yang/yang_card13_img.c"
        "yang/yang_card14_img.c"
        "yang/yang_card15_img.c"
        "yang/yang_card1_img.c"
        "yang/yang_card2_img.c"
        "yang/yang_card3_img.c"
        "yang/yang_card4_img.c"
        "yang/yang_card5_img.c"
        "yang/yang_card6_img.c"
        "yang/yang_card7_img.c"
        "yang/yang_card8_img.c"
        "yang/yang_card9_img.c"
        "yang/yang_start_btn_img.c"
        "xiaoxiaole/xiaoxaiole.c"
        "xiaoxiaole/coin_img.c"
        "xiaoxiaole/refs_btn_img.c"
        "xiaoxiaole/xiaoxiaole_bg_img.c"
        "pvz/pvz.c"
        "pvz/car_zb_img.c"
        "pvz/cherry_boom_img.c"
        "pvz/cherry_img.c"
        "pvz/dici_btn_img.c"
        "pvz/dici_img.c"
        "pvz/game_over_img.c"
        "pvz/hedan_btn_img.c"
        "pvz/huoyan_img.c"
        "pvz/jiguangdou_btn_img.c"
        "pvz/jiguangdou_img.c"
        "pvz/jiguangkou_img.c"
        "pvz/jump_zb.c"
        "pvz/lajiao_btn_img.c"
        "pvz/lajiao_img.c"
        "pvz/little_car_img.c"
        "pvz/nuclear_boom_img.c"
        "pvz/nuclear_img.c"
        "pvz/pvz_map_1.c"
        "pvz/pvz_map_3.c"
        "pvz/qiqiu_zb_img.c"
        "pvz/start_game_img.c"
        "pvz/sunshine.c"
        "pvz/sun_btn_img.c"
        "pvz/sun_img.c"
        "pvz/wandou_btn_img.c"
        "pvz/wandou_img.c"
        "pvz/wave_zb_come_img.c"
        "pvz/wogua_btn_img.c"
        "pvz/wogua_dead_img.c"
        "pvz/wogua_img.c"
        "pvz/yingtao_btn_img.c"
        "pvz/zb1.c"
        "pvz/zidan_split_img.c"
    INCLUDE_DIRS
        "include"
        "."
        "lv_100ask_2048"
        "yang"
        "xiaoxiaole"
        "pvz"
    REQUIRES lvgl__lvgl
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    LV_LVGL_H_INCLUDE_SIMPLE
)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-error=char-subscripts
    -Wno-error=unused-variable
    -Wno-error=unused-function
    -Wno-error=missing-braces
    -Wno-error=incompatible-pointer-types
)
